2004-12-21  JP Rosevear  <jpr@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c: update for
	remove/modify api changes

	* calendar/e-cal-backend-exchange-tasks.c: ditto

	* calendar/e-cal-backend-exchange.c: ditto	
	
2004-12-20  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Bumped the version to 2.1.2
	* NEWS : Updated

2004-12-20  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Now checking for camel-provider

2004-12-16  Sushma Rai <rsushma@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c : Fixed some memory leaks. 
	* calendar/e-cal-backend-exchange.c: ditto
	* storage/exchange-hierarchy-foreign.c: ditto
	* storage/exchange-hierarchy-webdav.c: ditto

2004-12-15  Rodrigo Moya <rodrigo@novell.com>

	* addressbook/e-book-backend-exchange.c: use libedataserver's e-sexp.h.

	* calendar/e-cal-backend-exchange.c (receive_objects, book_resource):
	pass correct number of arguments to e_cal_backend_notify_object_removed.

	* storage/Makefile.am: removed exchange-offline-utils.[ch] from build.

2004-12-15  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange.c : Fixed some memory leaks.
	* calendar/e-cal-backend-exchange-tasks.c : Modified a structure member
	* calendar/e-cal-backend-exchange.h : Similar

2004-12-15  Sushma Rai <rsushma@novell.com>

	* configure.in: Corrected camel provider directory path.

2004-12-15  Sushma Rai <rsushma@novell.com>
	
	* calendar/e-cal-backend-exchange-calendar.c:
	Fixed several memory leaks.

2004-12-14  Sarfraaz Ahmed <asarfraaz@novell.com>

	* lib/e2k-path.c : Moved this from evolution/e-util as this is no
	longer present there after camel moved to e-d-s.
	* lib/e2k-path.h : Similar
	* lib/Makefile.am : Included the above files
	* storage/exchange-offline-utils.c : Has the utility functions used
	by offline code.
	* storage/exchange-offline-utils.h : Similar
	* storage/Makefile.am : Added the above files
	*  camel/camel-exchange-store.c : Fixed to make use of e2k-path methods